# OceanSODA-ETHZv2

./: .gitignore  README.md  pyproject.toml
notebooks/: cmems_datasets.yaml  dataset_sources.yaml  download_files.ipynb  model_rep.yaml  test.ipynb
scripts/data/: cmems_data.py
src/oceansoda_ethzv2/: __init__.py
src/oceansoda_ethzv2/data/: __init__.py  ceda.py  checker.py  cmems.py  era5.py  feature_engineering.py  loader_inference.py  occci.py  processors.py  soda.py  sst.py
src/oceansoda_ethzv2/data/co2atm/: __init__.py  main.py  mauna_loa.py  noaa_mbl.py  smoothing.py  xco2_to_fco2.py
src/oceansoda_ethzv2/data/utils/: __init__.py  checker.py  config.py  core.py  date_utils.py  download.py  processors.py  smoothing.py  zarr_utils.py
src/oceansoda_ethzv2/model/: __init__.py  dataloader_inference.py  dataloader_train.py  inference.py  metrics.py  mlp.py  training.py
tests/data/: test_zarr_utils.py
