[project]
name = "oceansoda-ethzv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lukegre", email = "lukegre@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "copernicusmarine>=2.1.1",
    "frozendict>=2.4.6",
    "gcsfs>=2025.5.1",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "memoization>=0.4.0",
    "munch>=4.0.0",
    "netcdf4>=1.7.2",
    "pooch>=1.8.2",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "xarray>=2025.4.0",
    "xskillscore>=0.0.26",
    "zarr<3",
]

[project.scripts]
oceansoda-ethzv2 = "oceansoda_ethzv2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
